Add checkmark, updated text

--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@
                 <article class="article">
                     <h2 class="services__title">Front-end</h2>
                     <div class="services__text">
-                        <p>I wasn't born as a designer but the process and the study behind it have always fascinated me, so you won't find me behind the classic artboard but immersed in Figma and stylesheets, creating layouts and buttons.</p>
-                        <p>Everything will be responsive and with a focus for the <span class="tooltip-wrapper" data-tooltip="User Experience">UX</span>.</p>
-                        <p>I love micro-interactions and all the little details that can spice up your experience.</p>
+                        <p>My studies did not begin with design but were introduced over time: the process, the research and the design patterns behind it have always fascinated me.</p>
+                        <p>So you will not find me behind the classic artboard but creating layouts in Figma, between grids, buttons and style sheets.</p>
+                        <ul role="list" class="list--check">
+                            <li><p>Responsiveness, ease of use and <span class="tooltip-wrapper" data-tooltip="User Experience">UX</span> are just some of my priorities.</p></li>
+                            <li><p>I love micro-interactions and all the little details that can spice up your experience.</p></li>
+                        </ul>
                     </div>
                     <div class="services__icons" hidden>
                         <p>
@@ -105,13 +108,17 @@
                 <article class="article">
                     <h2 class="services__title">Back-end</h2>
                     <div class="services__text">
-                        <p>I use Python and JavaScript as back-end language to build dynamic websites on Django.</p>
-                        <p>I always prioritize ease of maintenance and performance</p>
+                        <p>It all started with a passion for software programming.</p>
+                        <ul role="list" class="list--check">
+                            <li><p>I use Python and JavaScript as back-end language to build dynamic websites on Django.</p></li>
+                            <li><p>I always prioritize ease of maintenance and performances.</p></li>
+                        </ul>
                     </div>
                     <div class="services__icons" hidden>
                         <p>
-                            <span class="tooltip-wrapper" data-tooltip="Django"><i class="iconify" data-icon="logos:django-icon"></i></span>
                             <span class="tooltip-wrapper" data-tooltip="Python"><i class="iconify" data-icon="logos:python"></i></span>
+                            <span class="tooltip-wrapper" data-tooltip="Django"><i class="iconify" data-icon="logos:django-icon"></i></span>
+                            <span class="tooltip-wrapper" data-tooltip="Heroku"><i class="iconify" data-icon="logos:heroku-icon"></i></span>
                             <!-- <span class="tooltip-wrapper" data-tooltip="AWS"><i class="iconify bg-light" data-icon="logos:aws"></i></span> -->
                         </p>
                     </div>
@@ -119,9 +126,12 @@
                 <article class="article">
                     <h2 class="services__title">More...</h2>
                     <div class="services__text">
-                        <p>My friends are VS Code and the command line so I can keep everything updated on <a class="link-accent" href="https://github.com/Athryell" target="_blank">Github</a>.</p>
-                        <p>(I used to play around with C# to build games on the Unity Engine)</p>
-                        <p>I'm loading some small animations and project on <a class="link-accent" href="https://codepen.io/athryell" target="_blank">Codepen</a></p>
+                        <p>I always try to use the best tools for the best job:</p>
+                        <ul role="list" class="list--check">
+                            <li><p><a class="link-accent" href="https://github.com/Athryell" target="_blank">Github</a> never ceases to amaze me with its versatility and power.</p></li>
+                            <li><p>VS-Code allows me to be efficient as well as effective.</p></li>
+                            <li><p>Sometimes I create games with C# on the Unity Engine.</p></li>
+                        </ul>
                     </div>
                     <div class="services__icons" hidden>
                         <p>
@@ -145,10 +155,12 @@
             <article>
                 <h2 id="currently-learning" class="services__title services__title--learning">Currently learning</h2>
                 <div class="services__text">
-                    <p>Library: React</p>
-                    <p>UX: Accessibility (super important)</p>
-                    <p>Visual editor: Webflow</p>
-                    <p>Optimization and performances</p>
+                    <ul class="list--dot">
+                        <li>Library: React</p></li>
+                        <li>UX: Accessibility (super important)</p></li>
+                        <li>Visual editor: Webflow</p></li>
+                        <li>Optimization and performances</p></li>
+                    </ul>
                 </div>
                 <div class="services__icons" hidden>
                     <p>
