--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
 
         <!-- My work -->
         <section class="section" aria-labelledby="work__title" id="work-link">
+            <div class="ribbon ribbon-top-left"><span>under maintenance!</span></div></div>
+            
             <h1 class="section__title title-separator" id="work__title">My work</h1>
             
             <div class="card-container">
