--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <div id="hero__title">
                     <p>Hi there, I'm</p>
                     <h1>Alessandro</h1>
-                    <p>a <em>curious</em> web developer</p>
+                    <p>a <em><span class="typed-text"></span><span class="cursor blink">&nbsp;</span></em> developer</p>
+
                 </div>
                 <!-- <img class="hero__img" src="img/hero_img_placeholder.png" alt="Alex say hi"> -->
             </div>
